test/error/iface/errHfsm2.rzy

ErrHfsm2 = Component
  funcA : slot();
  funcB : slot();

hfsm(One)
  One : state;
  One to One by funcA();
  One to One by funcB();
  One to One by funcC();
end

